# assets/swagger.json
@@ -3418,6 +3418,10 @@
     "v1alpha1ResourceAction": {
       "type": "object",
       "properties": {
+        "available": {
+          "type": "boolean",
+          "format": "boolean"
+        },
         "name": {
           "type": "string"
         },
@@ -3426,6 +3430,9 @@
           "items": {
             "$ref": "#/definitions/v1alpha1ResourceActionParam"
           }
+        },
+        "test": {
+          "type": "string"
         }
       }
     },
