# pkg/apis/application/v1alpha1/types.go
@@ -964,7 +964,8 @@ type ResourceActionDefinition struct {
 type ResourceAction struct {
 	Name      string                `json:"name,omitempty" protobuf:"bytes,1,opt,name=name"`
 	Params    []ResourceActionParam `json:"params,omitempty" protobuf:"bytes,2,rep,name=params"`
-	Available bool
+	Available bool                  `protobuf:"varint,3,opt,name=available"`
+	Test      string                `protobuf:"bytes,4,opt,name=test"`
 }
 
 type ResourceActionParam struct {
